--- a/pratica/news-homepage/style/style.css
+++ b/pratica/news-homepage/style/style.css
@@ -1,11 +1,13 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
 
-FALTA COR
-FALTA NAV
-FALTA HOVER
+/* 
 FALTA MQ
-
+*/
+:root{
+  --orange: rgb(233, 171, 83);
+  --red: rgb(241, 94, 80);
+}
 
 *{
     font-size: 15px;
@@ -16,16 +18,69 @@ FALTA MQ
 }
 body{
     position: relative;
-    height: 100vh;
+    height: 1730px;
+    background-color: lightgray;
   }
+
+  main > label > img{ /* COMEÇO DO NAV */
+    display: inline-block;
+    position: absolute;
+    top: 45px;
+    left: 70%;
+  }
+  main > input{
+    display: inline-block;
+    position: absolute;
+    top: 45px;
+    left: 70%;
+    opacity: 0;
+  }
+  .menu{
+    display: none;
+    position: absolute;
+    height: 100vh;
+    width: 75%;
+    background-color: #fff;
+    top: 0;
+    left: 25%;
+  }
+  .back{/* FUNDO CINZA */
+    position: absolute;
+    height: 100vh;
+    width: 33%;
+    background-color: rgba(0, 0, 0, 0.404);
+    left: -33%;
+  }
+  
+  .menu > img{
+    display: block;
+    float: right;
+    margin-top: 40px;
+    margin-right: 75px;
+  }
+  .menu > nav{
+    margin-top: 100px;
+    margin-left: 30px;
+  }
+  .menu > nav > p{
+    font-size: 20px;
+    margin-top: 20px;
+  }
+  .menu > nav > p:hover{
+    font-weight: bold;
+    cursor: pointer;
+    color: rgb(241, 94, 80);
+    transition: .3s;
+  } /* FIM DO NAV */
+
   main{
-    background-color: gray;
+    background-color: #fff;
     position: absolute;
     width: 375px;
     height: 1730px;
-    /* top: 50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); */
+    transform: translate(-50%, -50%);
   }
   main > img{/*logo*/
     display: inline-block;
@@ -51,6 +106,7 @@ body{
     margin-bottom: 20px;
   }
   .future > p{
+    color: rgb(93, 95, 121);
     width: 330px;
     margin-bottom: 20px;
   }
@@ -58,18 +114,24 @@ body{
     letter-spacing: 2px;
     height: 50px;
     width: 150px;
-    background-color: darkred;
+    background-color: var(--red);
     color: white;
     border: none;
   }
+  .future > button:hover{
+    background-color: rgb(0, 0, 26);
+    cursor: pointer;
+    transition: .3s;
+  }
+
   .destaque{
-    background-color: black;
+    background-color: rgb(0, 0, 26);
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
   }
   .destaque > h1{
-    color: darkgoldenrod;
+    color: var(--orange);
     font-size: 1.5em;
     padding-top: 20px;
     margin-left: 15px;
@@ -81,8 +143,13 @@ body{
     color: white;
     margin-left: 15px;
   }
+  .destaque > h2:hover{
+    color: var(--orange);
+    cursor: pointer;
+    transition: .3s;
+  }
   .destaque > p{
-    color: lightgray;
+    color: rgb(197, 198, 206);
     margin-left: 15px;
     margin-bottom: 20px;
     line-height: 25px;
@@ -111,6 +178,7 @@ body{
     margin-bottom: 20px;
   }
   .numeros > div > h1{
+    color: hsl(233, 8%, 79%);
     display: inline-block;
     position: absolute;
     margin-left: 20px;
@@ -124,7 +192,13 @@ body{
     margin-left: 20px;
     margin-top: 50px;
   }
+  .numeros > div>  h2:hover{
+    color: var(--red);
+    cursor: pointer;
+    transition: .2s;
+  }
   .numeros > div > p{
+    color: rgb(93, 95, 121);
     display: inline-block;
     position: absolute;
     margin-top: 70px;
@@ -136,16 +210,4 @@ body{
 /* 
 - Mobile: 375px
 - Desktop: 1440px
-
-
-- Soft orange: hsl(35, 77%, 62%)
-- Soft red: hsl(5, 85%, 63%)
-
-### Neutral
-
-Off-white: hsl(36, 100%, 99%)
-Grayish blue: hsl(233, 8%, 79%)
-Dark grayish blue: hsl(236, 13%, 42%)
-Very dark blue: hsl(240, 100%, 5%)
-
 */
