--- a/pratica/news-homepage/style/style.css
+++ b/pratica/news-homepage/style/style.css
@@ -55,15 +55,20 @@ body{
     margin-top: 100px;
     margin-left: 30px;
   }
-  .menu > nav > p{
-    font-size: 20px;
+  .menu > nav > ul > li{
+    list-style: none;
     margin-top: 20px;
   }
-  .menu > nav > p:hover{
+  .menu > nav > ul > li > a:hover{
     font-weight: bold;
     cursor: pointer;
     color: rgb(241, 94, 80);
     transition: .3s;
+  }
+  .menu > nav > ul > li > a{
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
   } /* FIM DO NAV */
 
   main{
