--- a/pratica/testimonials-grid-section/style/media-query.css
+++ b/pratica/testimonials-grid-section/style/media-query.css
@@ -4,7 +4,7 @@
         height: 800px;
     }
     main{
-        background-color: white;
+        background-color: transparent;
         height: 700px;
         width: 1410px;
     }
