--- a/pratica/alternating-huddle-landing/style/style.css
+++ b/pratica/alternating-huddle-landing/style/style.css
@@ -1,8 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
-/* font-family: 'Poppins', sans-serif; */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-/* font-family: 'Open Sans', sans-serif; */
 
 *{
     margin: 0;
@@ -15,6 +13,12 @@
     --grayishblue: rgb(128, 141, 153);
     --darkcyan: rgb(0, 37, 46);
     --palecyan: rgb(235, 251, 255);
+}
+h1{
+    font-family: 'Poppins', sans-serif;
+}
+p{
+    font-family: 'Open Sans', sans-serif;
 }
 body{
     position: relative;
@@ -32,7 +36,7 @@ body{
     height: 590px;
 }
 header{
-    background-color: rgba(0, 255, 255, 0.185);
+    background-color: rgba(153, 255, 255, 0.185);
     width: 100%;
     height: 650px;
     padding-top: 30px;
@@ -50,7 +54,12 @@ header > .botao1{
     border-radius: 20px;
     padding: 2px 25px;
     border: none;
-    box-shadow: 0px 5px 7px 1px rgba(0, 0, 0, 0.297);
+    box-shadow: 0px 5px 7px 1px rgba(0, 0, 0, 0.197);
+}
+header > .botao1:hover{
+    cursor: pointer;
+    color: lightgray;
+    transition: .3s;
 }
 header > h1{
     font-size: 2em;
@@ -68,9 +77,14 @@ header > .botao2{
     border-radius: 20px;
     border: none;
     margin-left: 50px;
-    background-color: rgb(255, 0, 221);
+    background-color: var(--pink);
     color: white;
     font-weight: 600;
+}
+header > .botao2:hover{
+    cursor: pointer;
+    background-color: rgb(255, 147, 215);
+    transition: .3s;
 }
 header > .mockups{
     display: block;
@@ -80,11 +94,11 @@ header > .mockups{
 }
 
 main{
-    background-color: lightgray;
+    background-color: transparent;
     margin-top: 50px;
 }
 main > section{
-    background-color: red;
+    background-color: white;
     margin-top: 30px;
     margin-left: 12px;
     width: 350px;
@@ -121,11 +135,12 @@ main > section > p{
 }
 .flutuando > h1{
     text-align: center;
-    font-size: 1.3em;
+    font-size: 1.2em;
     margin-top: 20px;
 }
 .flutuando > button{
-    background-color: rgb(255, 0, 170);
+    font-weight: bold;
+    background-color: var(--pink);
     color: white;
     height: 40px;
     width: 200px;
@@ -137,20 +152,26 @@ main > section > p{
     transform: translateX(-50%);
     top: 80px;
 }
+.flutuando > button:hover{
+    cursor: pointer;
+    background-color: rgb(255, 147, 215);
+    transition: .3s;
+}
 
 footer{
-    background-color: gray;
+    background-color: var(--darkcyan);
     margin-top: 200px;
     padding-top: 100px;
 }
 footer > section > img{
     width: 200px;
     margin-bottom: 20px;
+    margin-left: 10px;
 }
 footer > section > p{
     color: white;
     font-size: 18px;
-    padding-left: 50px;
+    padding-left: 60px;
     padding-right: 40px;
     margin-bottom: 20px;
 }
@@ -158,10 +179,21 @@ footer > section > div{/*ICONES*/
     position: absolute;
     margin-left: 20px;
 }
-footer > section:nth-child(2) > p{
-    padding-left: 20px;
+footer > section:nth-child(2) > ul{
+    list-style: none;
 }
-footer > section:nth-child(2) > p:nth-child(6){
+footer > section:nth-child(2) > ul > li{
+    color: white;
+    font-size: 18px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+footer > section:nth-child(2) > ul > li:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    transition: .3s;
+}
+footer > section:nth-child(2) > ul > li:nth-child(6){
     margin-bottom: 50px;
 }
 footer > .icones{
@@ -172,8 +204,8 @@ footer > .icones{
     width: 120px;
 }
 .icones > div:hover{
-    fill: var(--magenta);
-    border: 1px solid var(--magenta);
+    fill: var(--pink);
+    border: 1px solid var(--pink);
     cursor: pointer;
     transition: .3s;
 }
@@ -216,17 +248,3 @@ footer > p{
     margin-top: 110px;
     padding-bottom: 20px;
 }
-
-/* - Mobile: 375px
-- Desktop: 1440px
-
-### Headings
-
-- Family: [Poppins](https://fonts.google.com/specimen/Poppins)
-- Weights: 600
-
-### Body, Call-to-actions
-
-- Family: [Open Sans](https://fonts.google.com/specimen/Open+Sans)
-- Weights: 400, 700
- */
