--- a/pratica/fylo-landing-page/style/style.css
+++ b/pratica/fylo-landing-page/style/style.css
@@ -80,13 +80,16 @@ main{
     margin-bottom: 40px;
     padding: 0px 10px;
 }
-.files > input{
+.files > form > input{
     display: block;
     width: 330px;
     height: 30px;
     margin: 0px 20px 20px 20px;
+    padding-left: 5px;
+    border-radius: 4px;
+    border: 1px solid;
 }
-.files > input:nth-child(5){
+.files > form > input:nth-child(2){
     background-color: hsl(224, 93%, 58%);
     color: white;
     font-weight: bold;
@@ -97,7 +100,7 @@ main{
     border: none;
     border-radius: 4px;
 }
-.files > input:nth-child(5):hover{
+.files > form > input:nth-child(2):hover{
     cursor: pointer;
     background-color: rgb(102, 102, 255);
     transition: .3s;
@@ -211,14 +214,17 @@ main{
     margin-top: 20px;
     padding: 0px 28px;
 }
-.access > input{
+.access > form > input{
     display: block;
     width: 300px;
     height: 30px;
     margin: 0px 35px 20px 35px;
     margin-top: 20px;
+    padding-left: 5px;
+    border-radius: 4px;
+    border: none;
 }
-.access > .button{
+.access > form > .button{
     background-color: hsl(224, 93%, 58%);
     color: white;
     font-weight: bold;
@@ -228,7 +234,7 @@ main{
     margin: 0px 35px;
     border: none;
     border-radius: 4px;
-}.access > .button:hover{
+}.access > form > .button:hover{
     cursor: pointer;
     background-color: rgb(60, 139, 153);
     transition: .3s;
@@ -259,6 +265,7 @@ main{
 }
 .footer > ul > li{
     height: 40px;
+    width: 100px;
     color: hsl(0, 0%, 75%);
 }
 .footer > ul > li:hover{
