--- a/pratica/chat-app/style/style.css
+++ b/pratica/chat-app/style/style.css
@@ -8,11 +8,27 @@
     font-size: 16px;
     font-family: 'Rubik', sans-serif;
 }
-
 body{
     background-color: white;
     position: relative;
     height: 100vh;
+}
+
+.fundo1{
+    background-image: linear-gradient(to bottom, #af38ff, #8838ff 20%);
+    height: 500px;
+    width: 250px;
+    border-radius: 0px 0px 250px 0px;
+    position: relative;
+}
+.fundo2{
+    background-color: #e942ff1e;
+    height: 500px;
+    width: 250px;
+    border-radius: 250px 0px 0px 0px;
+    position: relative;
+    margin-top: -50px;
+    float: right;
 }
 main{
     background-color: #fff;
