--- a/projeto-android/style/style.css
+++ b/projeto-android/style/style.css
@@ -66,7 +66,7 @@ nav{
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.500);
 }
 nav>a{
-    color: var(--cor1);
+    color: white;
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
@@ -181,4 +181,5 @@ footer a{
 footer a:hover{
     text-decoration: underline;
     color: var(--cor1);
+    transition: .4s;
 }
